Criando um CRUD Scaffolding

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-e0a7062f-353c-40b0-a5c1-7f495e711de0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
